# pikuma_course_engine

./: .gitignore  CMakeLists.txt  CMakeVSBuild.bat  LICENSE  README.md
demo/: CMakeLists.txt
demo/src/: main.cpp
engine/: CMakeLists.txt
engine/include/engine/coreModule/: Game.h
engine/include/engine/logModule/: Log.h  LogManager.h  LogManagerInstance.h  LogObserver.h
engine/include/engine/utilsModule/: Singleton.h  Types.h
engine/src/coreModule/: Game.cpp
engine/src/logModule/: Log.cpp  LogManager.cpp
engine/src/logModule/observers/: SpdLogger.cpp  SpdLogger.h
